--- a/index.html
+++ b/index.html
@@ -1,20 +1,6 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title>Hyperspace by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
 	<body class="is-preload">
-
-		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
 					<nav>
@@ -27,16 +13,12 @@
 					</nav>
 				</div>
 			</section>
-
-		<!-- Wrapper -->
 			<div id="wrapper">
-
-				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>Welcome to Wiggle Dev Studio!</h1>
+							<p>We are a passionate team of developers dedicated to crafting innovative and engaging iOS applications.<br />Our goal is to enhance the iOS user experience with creative and functional apps that delight and inspire.<br />
+							<a href="https://apps.apple.com/pl/app/wiggle-color-widgets-themes/id6471030767">Download Wiggle</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -49,10 +31,10 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Creators of Wiggle: Color Widgets & Themes</h2>
+									<p>We developed the popular iOS app that allows users to personalize their devices with stunning widgets and themes.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://apps.apple.com/pl/app/wiggle-color-widgets-themes/id6471030767" class="button">Download in App Store</a></li>
 									</ul>
 								</div>
 							</div>
@@ -61,10 +43,10 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Innovative Developers</h2>
+									<p> Our team is comprised of talented designers and engineers dedicated to pushing the boundaries of iOS app development.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://apps.apple.com/pl/app/wiggle-color-widgets-themes/id6471030767" class="button">Check our other apps</a></li>
 									</ul>
 								</div>
 							</div>
@@ -73,11 +55,8 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									<h2>Passionate Visionaries</h2>
+									<p>We are driven by our love for technology and our commitment to delivering exceptional user experiences through our unique and engaging applications.</p>
 								</div>
 							</div>
 						</section>
@@ -87,41 +66,41 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>At Wiggle Dev Studio, we create innovative and engaging iOS applications that enhance the user experience. We are committed to excellence, security, and pushing the boundaries of app development.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Expert Development</h3>
+									<p>With our skilled team of designers and engineers, we turn ideas into high-quality, user-friendly apps.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Focus on Security</h3>
+									<p>We prioritize user data protection and implement robust security measures in all our applications.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Innovative Solutions</h3>
+									<p>Our team is dedicated to developing apps that are both creative and functional.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>User-Centric Design</h3>
+									<p>Our apps are designed with the user in mind, ensuring an intuitive and enjoyable experience.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Continuous Improvement</h3>
+									<p>We constantly update and improve our apps to keep up with the latest technology trends and user needs.</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Develop Unique Apps</h3>
+									<p>We specialize in creating one-of-a-kind iOS applications that stand out in the market.</p>
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<li><a href="https://apps.apple.com/pl/app/wiggle-color-widgets-themes/id6471030767" class="button">Show in App Store</a></li>
 							</ul>
 						</div>
 					</section>
@@ -130,7 +109,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>We'd love to hear from you! Whether you have questions, feedback, or just want to say hello, feel free to reach out to us.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -149,7 +128,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="mailto:suport@wiggledevstudio.com" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
@@ -157,17 +136,17 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+											<span>02-601 Raclawicka 42<br />
+											Warszawa<br />
+											Poland</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<a href="#">suport@wiggledevstudio.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<span>+48 573-023-323</span>
 										</li>
 										<li>
 											<h3>Social</h3>
@@ -191,8 +170,11 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+    						<li>&copy; Individual Entrepreneur YAHOR YANUKOVICH. All rights reserved.</li>
+						<li><a href="terms.html">Terms of Use</a></li>
+						<li><a href="privacy.html">Privacy Policy</a></li>
 					</ul>
+
 				</div>
 			</footer>
 
