--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="mailto:suport@wiggledevstudio.com" class="button submit">Send Message</a></li>
+										    <li><a href="mailto:support@wiggledevstudio.com" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
@@ -143,13 +143,13 @@
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>02-601 Raclawicka 42<br />
+											<span>02-601 Raclawicka str 42<br />
 											Warszawa<br />
 											Poland</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">suport@wiggledevstudio.com</a>
+											<a href="#">support@wiggledevstudio.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
