--- a/privacy.html
+++ b/privacy.html
@@ -1,12 +1,6 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,37 +10,85 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">Wiggle Dev Studio</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="terms.html">Terms of Use</a></li>
+						<li><a href="privacy.html">Privacy Policy</a></li>
 					</ul>
 				</nav>
 			</header>
 
 		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Main -->
-					<section id="main" class="wrapper">
-						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-						</div>
-					</section>
-
-			</div>
+			<div class="privacy-container">
+			        <h1>Privacy Policy</h1>
+			        <p>This Privacy Policy is an integral part of the app’s Terms of Service and is deemed to be a consent to be bound by all services offered by our application. It explains how we protect user’s privacy.</p>
+			
+			        <h2>Privacy Policy</h2>
+			        <p>This Privacy Policy describes the information we collect, how it may be used, with whom it may be shared, and your choices about such uses and disclosures. We encourage you to read this Privacy Policy carefully before using our application (our “Software” or “App”) or services (our “Services”). By using our Service, you are accepting the practices described in this Privacy Policy. IF YOU DO NOT AGREE TO THE TERMS AND CONDITIONS SET FORTH HEREIN, PLEASE DO NOT USE THE SOFTWARE AND SERVICES.</p>
+			
+			        <p>This Policy applies only to information we collect in our App and in e-mail, text, and other electronic communications sent through or in connection with our App. This Policy DOES NOT apply to information that we collect offline, information collected in other apps or websites (including third-party websites you may access through the App), or information collected by any third party. These third parties may have their own privacy policies, which we encourage you to read before providing information on or through them.</p>
+			
+			        <h2>What kinds of information we collect from you?</h2>
+			        <p>There are two general categories of information we will process:</p>
+			
+			        <ol>
+			            <li><strong>Information may be automatically collected when you use or access the Software and the Service:</strong></li>
+			            <ul>
+			                <li>We may use APIs provided by iOS and third-party automatic data processing technologies to collect technical information from your device when you visit our Service. This information could include the type, name, and version of the operating system; your configuration and settings of the Software and Services, version of the Software and Services; ISP (Internet Service Provider), Internet protocol (IP) address, anonymous user identifiers, device configuration, and identifiers; and Advertising ID.</li>
+			                <li>We may use APIs provided by iOS, Google Firebase, Amplitude, Facebook to collect certain usage-related information regarding your use and interaction with your device.</li>
+			                <li>We may use APIs provided by iOS to collect information about your subscription orders, such as purchase items, order status, payment time. We do not collect and we are not responsible for the collection or security of payment details. Payment information is processed and stored using third-party companies (such as Apple). These companies can be contacted through their websites: <a href="https://www.apple.com">https://www.apple.com</a>. Before entering your personal payment details, we suggest that you read and become familiar with the privacy policy of these third-party companies.</li>
+			            </ul>
+			
+			            <li><strong>Information that you provide to us:</strong></li>
+			            <ul>
+			                <li>Support Related Information: If you communicate with us via our support section or via email, we may collect your email address voluntarily submitted.</li>
+			                <li>Camera, Photos: In order to use some of the features of the Software, you may voluntarily grant us permission to access the photo album to save photos on your mobile device. Only if you confirm the permission, will we gain access to your album.</li>
+			            </ul>
+			        </ol>
+			
+			        <h2>How we use your information?</h2>
+			        <p>The main reason we use your information is to deliver and improve the Service. Read on for a more detailed explanation of the various reasons we use your information:</p>
+			
+			        <ul>
+			            <li>To operate and update the Software and the Service, and provide you with existing and new functionality and features.</li>
+			            <li>To improve and customize the Software and the Service.</li>
+			            <li>To maintain, test, monitor and improve the quality and operation of the Software.</li>
+			            <li>To provide you with support and handle your complaints and/or feedback.</li>
+			            <li>To take any action in case of a dispute involving you in connection with the Software and the Service.</li>
+			            <li>To comply and satisfy any applicable law regulation, legal process, or enforceable governmental request.</li>
+			        </ul>
+			
+			        <p>If any new purposes for processing your information arise we will let you know we start to process the information for that other purpose by introducing the corresponding changes to this Privacy policy.</p>
+			
+			        <h2>Sharing Information with Third Parties</h2>
+			        <p>We will not share any personal information that we have collected from you except for the following events:</p>
+			
+			        <ol>
+			            <li>If we are required by law to disclose your information, we may share your information with law enforcement or other competent authorities and any third party, as may be required (e.g., to detect, prevent or otherwise address fraud, security, or technical issues; to respond to claims or satisfy any legal process, subpoena, or governmental request; or to protect the rights, property, or personal safety of our users, its partners, or the general public).</li>
+			            <li>In the event we go through a business transition such as a merger or acquisition by another company, consolidation, change of control, reorganization, or sale of all or a portion of its assets, your information will be among the assets transferred.</li>
+			            <li>We may share your information with certain third parties (including, without limitation, search engines, content providers, and advertising networks and platforms) that provide various services (such as advertising, marketing, analysis, content, and search) in connection with the Software and the Service. We take appropriate measures to ensure that no user can be individually identified from the disclosure of such information, and we require these third parties (i) to keep the data secured, (ii) not to use the data for any other purpose other than to provide us with the Service; and (iii) to use the data solely in compliance with the applicable data protection laws and this Privacy Policy.</li>
+			        </ol>
+			
+			        <p>If you want to delete any personal information which we have shared with third parties, please contact us through the email displayed below. We would try our best to notify the third party of deleting the relative personal data, but no warranty as to the deletion is made by us.</p>
+			
+			        <p>We may also share personal information with our subsidiaries, affiliated and parent companies but their use of such information must comply with the applicable data protection laws and this Privacy Policy.</p>
+			
+			        <h2>Changes to the Privacy Policy</h2>
+			        <p>We may update our Privacy Policy from time to time. Thus, we advise you to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
+			        <a href="https://apps.apple.com/pl/app/wiggle-color-widgets-themes/id6471030767" class="appstore-link">Download on the App Store</a>
+			    </div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+    						<li>&copy; Individual Entrepreneur YAHOR YANUKOVICH. All rights reserved.</li>
+						<li><a href="terms.html">Terms of Use</a></li>
+						<li><a href="privacy.html">Privacy Policy</a></li>
 					</ul>
+
 				</div>
 			</footer>
 
