--- a/terms.html
+++ b/terms.html
@@ -1,12 +1,6 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,37 +10,73 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">Wiggle Dev Studio</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="terms.html">Terms of Use</a></li>
+						<li><a href="privacy.html">Privacy Policy</a></li>
 					</ul>
 				</nav>
 			</header>
 
 		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Main -->
-					<section id="main" class="wrapper">
-						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-						</div>
-					</section>
-
-			</div>
+			<div class="terms-container">
+			        <h1>Terms of Use</h1>
+			        <p>Welcome to the app (our “App” or “Service”), operated by “we” or “us”. This Terms of Service (this “Agreement”) is a legal agreement between you and us regarding your downloading, installation, and use of this App and related Service.</p>
+			        <p>YOUR DOWNLOADING, INSTALLATION, USE OF, AND OTHER ACCESS TO THE SOFTWARE ARE CONDITIONED ON YOUR ACCEPTANCE AND COMPLIANCE WITH THE TERMS OF THIS AGREEMENT. IF YOU DO NOT AGREE WITH THIS AGREEMENT, PLEASE STOP USING THE APP IMMEDIATELY.</p>
+			        <p>We have the right to modify the terms of this Agreement regarding the updates of the Software. You can check the modified version of this Agreement from the Software. You understand and agree that if you continuously use the Software after the date on which these terms have changed, we will treat your use as acceptance and compliance with the updated terms.</p>
+			        <h2>1. Scope of the App License</h2>
+			        <p>We grant you a personal, revocable, non-transferable, and non-exclusive license to use the App. Unless otherwise expressly agreed in writing, you are permitted to install, use, display, or run the App or use the Service on your smart mobile end-device, including but not limited to tablet, smartphone (“end-device”) for non-commercial purposes.</p>
+			        <p>You may not use the App under the following conditions:</p>
+			        <ul>
+			            <li>you shall not create derivative works from the App or commercially exploit the App, in whole or in part, in any way;</li>
+			            <li>you shall use the App for lawful purposes only;</li>
+			            <li>you shall not use, sell, modify, or distribute the App except as permitted by the functionality of the App;</li>
+			            <li>you shall not conduct any behaviors that jeopardize computer network security, including but not limited to: use unauthorized data or unauthorized access to server/account; enter public computer network or other’s computer system to delete, modify, add stored information without permission; attempt to search, scan, test the App system, Internet leak, or other behaviors breaking internet security; attempt to interfere, damage the App system normal running, deliver the malware or virus intentionally to damage normal internet information service; forge (part of) names of TCP/IP package.</li>
+			            <li>You may not use the App in a way that may lead to damage, suspension, overloading, or quality reduction to the App (or server and internet-connected to the App), or in a way that may affect the Service provided.</li>
+			            <li>You promise not to copy, grant a sub-license, share or sell the App or the Service to any others. You are fully responsible for any fees and expenses arising therefrom.</li>
+			            <li>We reserve all rights not expressly granted to you. And this license may automatically terminate if you violate any of these restrictions and may be terminated by us at any time at our sole discretion.</li>
+			        </ul>
+			        <h2>2. Intellectual Property Rights</h2>
+			        <p>You acknowledge and agree that we possess any and all the lawful rights and interests of the App, including any intellectual property rights involved in the App and Service.</p>
+			        <p>The information in the App includes but is not limited to words, software, audios, and videos, photos, diagrams, all contents in advertisements, the commercial information we offer to you, etc., which are all protected under copyright, patent, trademark as well as all other related laws and regulations. You are allowed to use these contents only when you have our authorization; no unauthorized reproduction, modification, or compilation of these contents or creation of relevant derivative works are permitted.</p>
+			        <p>Unless you have otherwise reached a written agreement with us, this Agreement does not authorize you to use the App name, trademark, service mark, logo, domain name, or any other sign with distinctive brand features relating to us.</p>
+			        <h2>3. Privacy and Personal Information</h2>
+			        <p>We respect the privacy and personal information of each user and will protect your privacy and personal information in accordance with applicable law, especially special law on data protection by taking necessary measures and complying with the same in collecting, processing, transmitting, and storing your personal information. Please be sure to read carefully our Privacy Policy which specifies the way we collect and use your personal information, etc.</p>
+			        <h2>4. Use by Juveniles</h2>
+			        <p>The App does not directly target any juvenile users. If you are a juvenile user and decide to use the App anyway, please first seek the consent of your guardian and/or other adult with guardianship duties and use the App under the guidance and supervision of your guardian or any other adult with guardianship duties. In addition, your guardian and/or other adult with guardianship duties shall be responsible for assisting you in correctly understanding the contents of this Agreement and other related legal documents in order to guide you to use the App in a correct way.</p>
+			        <h2>5. Limitation of Liability and Disclaimer</h2>
+			        <p>You acknowledge and agree that the App may have potential risks like service interruption, failure to respond to the user’s request, due to force majeure, mobile communication terminal virus or hacker attack, system instability, user physical location, phone power off, and other reasons concerning technology, telecommunication lines. In no event shall we be liable for any risks stated above.</p>
+			        <ul>
+			            <li>We are not liable for any losses to users arising out of telecommunication line breakdown, technical problems, internet, mobile communication terminal failures, system instability, and any other force majeure.</li>
+			            <li>In view of business development and adjustment, we reserve the right to amend or terminate the Service without prior notice to users at any time, and we are not liable for users and any other third parties when executing this right.</li>
+			            <li>The Service which is not officially released or authorized by us and the derivative works of us are illegal. User’s downloading, installation, and using this App may lead to unexpected risk. We are not liable for any legal liabilities, issues arising from it.</li>
+			            <li>You agree to the most extent under applicable law, we own other disclaimer rights not listed in this agreement.</li>
+			        </ul>
+			        <h2>6. Update, Discontinuation, Suspension, and Termination of the App</h2>
+			        <p>You have the right to stop using the App at any time.</p>
+			        <p>The App may be updated from time to time. You may at your own discretion decide whether to accept the updates or not. We do not guarantee to provide you with the latest updated services if you do not accept the updates, and you shall be solely responsible for any loss that may be incurred.</p>
+			        <p>We reserve the rights to amend, interrupt, suspend or terminate to provide the App based on the actual situation at any time, which includes but is not limited to the memory space obtainable to a single user, the nature and quantity of the contents uploaded and other data or the ability of the users on continuously accessing the App and the Service, etc.</p>
+			        <p>You agree that we may, without prior notice, suspend or terminate the Service related to the App if:</p>
+			        <ul>
+			            <li>you are in breach of these Terms;</li>
+			            <li>we do so subject to the applicable law or requirements of a competent authority; or</li>
+			            <li>other conditions upon which we need to do so.</li>
+			        </ul>
+			        <p>Upon termination of the Service, we, subject to the applicable law and regulation, reserve the right to completely delete all information of you, and we shall no longer undertake obligations to you.</p>
+			        <a href="https://apps.apple.com/pl/app/wiggle-color-widgets-themes/id6471030767" class="appstore-link">Download on the App Store</a>
+			    </div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+    						<li>&copy; Individual Entrepreneur YAHOR YANUKOVICH. All rights reserved.</li>
+						<li><a href="terms.html">Terms of Use</a></li>
+						<li><a href="privacy.html">Privacy Policy</a></li>
 					</ul>
+
 				</div>
 			</footer>
 
