--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta name="facebook-domain-verification" content="lq8k5izbh7zul0ezlb8b2ycf834wa9" />
+
 	</head>
 
 	<body class="is-preload">
